# Sliding-Brick-Puzzle

./: .gitignore  CMakeLists.txt  CostNode.cpp  CostNode.h  Node.h  README.md  main.cpp
doc/: README.md
level/: level2.txt
src/: Matrix.cpp  Matrix.h  Moves.h  Node.cpp  Search.cpp  Search.h  main.cpp
